--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,26 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand">Support Hero</a>
+    </div>
 
-{{outlet}}
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li>{{link-to 'Home' 'index'}}</li>
+        <li>{{link-to 'Users' 'users'}}</li>
+        <li>{{link-to 'Schedules' 'schedules' (query-params null=null)}}</li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  {{outlet}}
+</div>
