--- a/app/templates/user/schedules.hbs
+++ b/app/templates/user/schedules.hbs
@@ -1,10 +1,1 @@
-<ul>
-  {{#each}}
-    <li>
-      {{#link-to 'schedule' this}}{{format-date date 'MMM D, YYYY'}}{{/link-to}}
-    </li>
-  {{/each}}
-</ul>
-
-<a href='#' {{action 'goToPreviousMonth'}}>Previous Month</a>
-<a href='#' {{action 'goToNextMonth'}}>Next Month</a>
+{{partial 'schedules/partials/schedules'}}
