--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,11 @@
-<div class='hero-unit'>
-  <h1>Today's Support Hero: {{link-to supportHero.user.name 'user' supportHero.user}}</h1>
+<div class="row">
+  <div class="col-md-8">
+    {{full-calendar events=calendarEvents startDate=start_date endDate=end_date}}
+  </div>
+  <div class="col-md-4">
+    <div class='hero-unit'>
+      <h1>Today's Support Hero: {{link-to supportHero.user.name 'user' supportHero.user}}</h1>
+    </div>
+    {{partial 'schedules/partials/schedules'}}
+  </div>
 </div>
-
-
-{{partial 'schedules/partials/schedules'}}
-
