--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -14,7 +14,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li>{{link-to 'Home' 'index' (query-params start_date=startOfMonth end_date=endOfMonth)}}</li>
+        <li>{{link-to 'Home' 'schedules' (query-params start_date=startOfMonth end_date=endOfMonth)}}</li>
         <li>{{link-to 'Users' 'users'}}</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
