--- a/app/templates/user/index.hbs
+++ b/app/templates/user/index.hbs
@@ -1,4 +1,4 @@
-{{partial 'schedules/partials/nav'}}
+{{partial 'user/partials/schedules/nav'}}
 
 <div class="row">
   {{partial 'schedules/partials/user-schedules'}}
