--- a/app/templates/users/index.hbs
+++ b/app/templates/users/index.hbs
@@ -1,10 +1,16 @@
-<ul>
-  {{#each}}
-    <li>
-      {{#link-to 'user' this}}
-        {{name}}
-      {{/link-to}}
-    </li>
-  {{/each}}
-</ul>
+<div class="col-md-6">
+  <div class="panel panel-success">
+    <div class="panel-heading">
+      <h4>All Users</h4>
+    </div>
+
+    <ul class="list-group">
+      {{#each}}
+        <li class="list-group-item">
+          {{link-to name 'user' this}}
+        </li>
+      {{/each}}
+    </ul>
+  </div>
+</div>
 
