--- a/app/templates/schedules/partials/-user-schedules.hbs
+++ b/app/templates/schedules/partials/-user-schedules.hbs
@@ -3,7 +3,7 @@
     <div class="panel-heading">
       <h4><u>{{userName}}</u> schedule for the month of {{format-date currentMonth 'MMMM YYYY'}}</h4>
     </div>
-    {{schedule-table content=userSchedules showUser=false}}
+    {{schedule-table content=userSchedules showUser=false markUndoable="markUndoableSchedule" swap="swapSchedule"}}
   </div>
 </div>
 
