UI for accepting/rejecting swaps and undoable schedules

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav">
         <li>{{link-to 'Home' 'index'}}</li>
         <li>{{link-to 'Schedules' 'schedules' (query-params start_date=defaultStartDate)}}</li>
+        <li>{{link-to 'Swaps' 'swaps'}}</li>
         <li>{{link-to 'Users' 'users'}}</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
