--- a/app/templates/user/index.hbs
+++ b/app/templates/user/index.hbs
@@ -1,6 +1,10 @@
 {{partial 'user/partials/schedules/nav'}}
 
 <div class="row">
-  {{partial 'schedules/partials/user-schedules'}}
-  {{partial 'schedules/partials/all-schedules'}}
+  <div class="col-md-6">
+    {{partial 'schedules/partials/user-schedules'}}
+  </div>
+  <div class="col-md-6">
+    {{partial 'schedules/partials/all-schedules'}}
+  </div>
 </div>
