--- a/app/templates/components/schedule-table.hbs
+++ b/app/templates/components/schedule-table.hbs
@@ -2,31 +2,25 @@
   <thead>
     <tr>
       <th>Date</th>
-      {{#if showUser}}
       <th>Support Hero</th>
-      {{/if}}
-      {{#if showActions}}
       <th width='200'>&nbsp;</th>
-      {{/if}}
     </tr>
   </thead>
   <tbody>
-  {{#each content}}
+  {{#each schedule in content itemController="schedule"}}
   <tr>
-    <td>{{format-date date 'MMM D, YYYY'}}</td>
-    {{#if controller.showUser}}
-    <td>{{link-to user.name 'user' user}}</td>
-    {{/if}}
-    {{#if controller.showActions}}
+    <td>{{format-date schedule.date 'MMM D, YYYY'}}</td>
+    <td>{{link-to schedule.user.name 'user' schedule.user}}</td>
     <td class='actions'>
-      <a href="#" {{action 'markUndoable' this}} class="btn btn-danger btn-sm">
-        Undoable
-      </a>
-      <a href="#" {{action 'swap' this}} class="btn btn-info btn-sm">
-        Swap Schedule
-      </a>
+        {{#if schedule.canEdit}}
+          <a href="#" {{action 'markUndoable' schedule}} class="btn btn-danger btn-sm">
+            Undoable
+          </a>
+          <a href="#" {{action 'swap' schedule}} class="btn btn-info btn-sm">
+            Swap Schedule
+          </a>
+        {{/if}}
     </td>
-    {{/if}}
   </tr>
   {{/each}}
   </tbody>
