--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -22,7 +22,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href='#' {{action 'invalidateSession'}}>Logout</a></li>
       </ul>
-      <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link">{{session.currentUser.name}}</a></p>
+      <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link">{{currentUser.name}}</a></p>
     </div>
   </div>
 </nav>
