--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -10,7 +10,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    {{#if session.currentUser.isManager}}
+    {{#if currentUser.isManager}}
       {{partial 'undoables/partials/pending'}}
       {{partial 'undoables/partials/approved'}}
     {{else}}
